<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/grp1">
        <item
                android:id="@+id/poems"
                android:icon="@drawable/home"
                android:title="@string/nav_poems" />
    </group>
    <group android:id="@+id/grp2" >
        <item
                android:id="@+id/settings"
                android:icon="@drawable/settings"
                android:title="@string/nav_settings" />
    </group>
    <group android:id="@+id/grp3">
        <item
                android:id="@+id/about"
                android:icon="@drawable/about"
                android:title="@string/nav_about" />
    </group>
    <group
            android:id="@+id/grp4"
            android:visible="false">
        <item
                android:id="@+id/how"
                android:icon="@drawable/help"
                android:title="@string/nav_use" />
    </group>
    <group android:id="@+id/grp5" >
        <item
                android:id="@+id/logout"
                android:icon="@drawable/exit"
                android:title="@string/logout" />
    </group>
</menu>