<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ll_forgot_pass"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#26000000"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        android:gravity="center">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20"
            android:background="@drawable/white_background"
            android:orientation="vertical"
            android:padding="@dimen/dimen_18">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_bold"
                android:text="@string/forgot_password"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_20"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:fontFamily="@font/lato_bold"
                android:text="@string/email"
                android:textColor="#5D5D5D"
                android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Email_for_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="Email address for forgot password"
                    android:hint="xyz@gmail.com"
                    android:fontFamily="@font/lato_regular"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColor="#000" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:gravity="center">

            <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@drawable/btn_shape"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/dialog_sub"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_16" />

            <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:layout_weight=".5"
                    android:background="@drawable/btn_outline_bg"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_16" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>