<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ll_forgot_pass"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#26000000"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20"
        android:background="@drawable/white_background"
        android:orientation="vertical"
        android:padding="@dimen/dimen_18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lato_bold"
            android:text="@string/change_language"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/btn_outline_bg"
            android:gravity="center"
            android:padding="@dimen/dimen_5">

            <Spinner
                android:id="@+id/spLang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dropDownWidth="fill_parent"
                android:minHeight="48dp"
                tools:listitem="@layout/item_spinner_lang" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:gravity="center">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="@drawable/btn_shape"
                android:fontFamily="@font/lato_medium"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_16" />

            <Button
                android:id="@+id/btnChangeLangCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_weight=".5"
                android:background="@drawable/btn_outline_bg"
                android:fontFamily="@font/lato_medium"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="@dimen/text_16" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>