<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fail_dialog"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#26FFFFFF"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialogLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bottomSheetRightGuideline"
            app:layout_constraintStart_toStartOf="@+id/bottomSheetLeftGuideline"
            app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/dialogLeftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/dialogRightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/dialogTopGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/dialogBottomGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95" />

        <TextView
                android:id="@+id/failMessageHeadingTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_black"
                android:gravity="center"
                android:text="@string/logout"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_18"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/dialogRightGuideline"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/dialogLeftGuideline"
                app:layout_constraintTop_toTopOf="@+id/dialogTopGuideline" />

        <TextView
                android:id="@+id/logOutMsgTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/lato_regular"
                android:gravity="center"
                android:text="@string/logout_message"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toStartOf="@+id/dialogRightGuideline"
                app:layout_constraintStart_toStartOf="@+id/dialogLeftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/failMessageHeadingTv" />

        <TextView
                android:id="@+id/noTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato_medium"
                android:padding="@dimen/dimen_8"
                android:text="@string/no"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_16"
                app:layout_constraintBottom_toTopOf="@+id/dialogBottomGuideline"
                app:layout_constraintStart_toStartOf="@+id/dialogLeftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/logOutMsgTv"
                app:layout_constraintVertical_bias="0.0" />

        <TextView
                android:id="@+id/yesTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/lato_medium"
                android:padding="@dimen/dimen_8"
                android:text="@string/yes"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_16"
                app:layout_constraintBottom_toTopOf="@+id/dialogBottomGuideline"
                app:layout_constraintEnd_toStartOf="@+id/dialogRightGuideline"
                app:layout_constraintTop_toBottomOf="@+id/logOutMsgTv"
                app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomSheetLeftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomSheetRightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

</androidx.constraintlayout.widget.ConstraintLayout>